Fix view names and add produces/method qualifiers to @RequestMapping methods